name:              fantasy
version:           0.1.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Model.Action
                     Model.Bootstrap
                     Model.LeagueSettings
                     Model.Numeric
                     Model.Time
                     Model.Types
                     Settings
                     Settings.StaticFiles
                     Handler.Admin
                     Handler.Admin.Blurb
                     Handler.Admin.Character
                     Handler.Admin.Common
                     Handler.Admin.Episode
                     Handler.Admin.Event
                     Handler.Admin.House
                     Handler.Admin.Record
                     Handler.Admin.Score
                     Handler.Admin.Series
                     Handler.Admin.Species
                     Handler.Common
                     Handler.Character
                     Handler.Episode
                     Handler.Event
                     Handler.Home
                     Handler.House
                     Handler.League
                     Handler.League.ConfirmSettings
                     Handler.League.DraftSettings
                     Handler.League.GeneralSettings
                     Handler.League.Layout
                     Handler.League.Player
                     Handler.League.Scoring
                     Handler.League.Setup
                     Handler.League.Team
                     Handler.League.Transaction
                     Handler.League.Week
                     Handler.Score
                     Handler.Series
                     Handler.Species

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends:
                   -- Due to a bug in GHC 8.0.1, we block its usage
                   -- See: https://ghc.haskell.org/trac/ghc/ticket/12130
                   base                          >= 4.8.2.0    && < 4.9
                                              || >= 4.9.1.0    && < 5
                 , yesod                         >= 1.4.3      && < 1.5
                 , yesod-core                    >= 1.4.30     && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 -- version 1.0 had a bug in reexporting Handler, causing trouble
                 , classy-prelude-yesod          >= 0.10.2     && < 1.0
                                              || >= 1.1
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.7
                 , persistent-postgresql         >= 2.1.1      && < 2.7
                 , persistent-template           >= 2.0        && < 2.7
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.3
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.3
                 , directory                     >= 1.1        && < 1.4
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 1.1
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.4
                 , esqueleto
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , fb
                 , yesod-fb
                 , yesod-auth-fb
                 , blaze-html
                 , blaze-markup
                 , old-locale
                 , load-env
                 , path-pieces                      >= 0.2.1
                 , serversession                    >= 1.0
                 , serversession-frontend-yesod     >= 1.0
                 , serversession-backend-persistent >= 1.0
                 , transformers
                 , random-source
                 , random-fu
                 , cron                             >= 0.4.0
                 , mime-mail
                 , mime-mail-ses
                 , utf8-string
                 , random
                 , numbers
                 , regex-compat
                 , wai

executable         fantasy
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, fantasy

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends: base
                 , fantasy
                 , yesod-test >= 1.5.2 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , esqueleto
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
